[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyesrgan"
version = "0.1"
dependencies = [
  "pillow==11.1.0"
]

[project.scripts]
pyesrgan = "pyesrgan.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pyesrgan = [
    "src/pyesrgan/**/*"
]
